--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,14 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  flutter_sound: ^9.2.13
+  permission_handler: ^11.0.1
+  audioplayers: ^5.2.1
+  collection: ^1.16.0
+  file_picker: ^5.0.1
+  http: '>=0.13.1 <2.0.0'
+  path_provider: ^2.0.12
+  provider: ^6.0.5
 
 dev_dependencies:
   flutter_test:
@@ -59,7 +67,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
+      - assets/
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
